[package]
name = "lost-metrics-processor"
version = "0.1.0"
authors = ["averageeucplayer"]
edition = "2024"
rust-version = "1.85"

[dependencies]
uuid = { version = "1.15.1", features = ["v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0.97"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "time", "sync", "macros"] }
log = "0.4.26"
flexi_logger = "0.29.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
hashbrown = { version = "0.15.0", features = ["serde"] }
r2d2 = "0.8.10"
rusqlite = { version = "0.34.0", features = ["bundled", "serde_json"] }
r2d2_sqlite = "0.27.0"
reqwest = { version = "0.12", features = ["json", "gzip"] }
flate2 = "1.0.30"
moka = { version = "0.12.7", features = ["sync"] }
rsntp = { version = "4.0.0", default-features = false, features = ["chrono"]  }

# lost-metrics-core = { git = "https://github.com/averageeucplayer/lost-metrics-core", branch="main" }
# lost-metrics-data = { git = "https://github.com/averageeucplayer/lost-metrics-data", branch="main" }
# lost-metrics-sniffer-stub = { git = "https://github.com/averageeucplayer/lost-metrics-sniffer-stub", branch="main" }
# lost-metrics-misc = { git = "https://github.com/averageeucplayer/lost-metrics-misc", branch="main" }
# lost-metrics-store = { git = "https://github.com/averageeucplayer/lost-metrics-store", branch="main" }

lost-metrics-core = { path= "../lost-metrics-core" }
lost-metrics-data = { path= "../lost-metrics-data" }
lost-metrics-sniffer-stub = { path= "../lost-metrics-sniffer-stub" }
lost-metrics-misc = { path= "../lost-metrics-misc" }
lost-metrics-store = { path= "../lost-metrics-store" }

[dev-dependencies]
mockall = "0.13.1"